Prevent locked scrollbars

--- a/source/content-script/pageview/content.css
+++ b/source/content-script/pageview/content.css
@@ -5,7 +5,7 @@ html.pageview {
 
 html.pageview > body {
     /* animation properties are set inline */
-    position: relative;
+    position: relative !important;
 
     width: 100%;
     max-width: 900px !important;
@@ -13,6 +13,7 @@ html.pageview > body {
 
     border-radius: 10px !important;
     overflow-x: hidden !important;
+    overflow-y: hidden !important;
 
     cursor: auto;
 }
